# protobuf-langserver

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj.filters  LICENSE  LICENSE-THIRD-PARTY.md  README.md  azure-pipelines.yml  build.ps1  build.sh  cmake_install.cmake  libprotobuf-lite.vcxproj  libprotobuf.vcxproj  protobuf.pc  protobuf.sln  protoc.vcxproj.filters
language-server/: README.md  language-server.sln
libminiprotoc/: CMakeLists.txt  CMakeSettings.json  README.md
libminiprotoc/libminiprotoc/: CMakeLists.txt  inmemoryinputstream.cpp  inmemoryinputstream.h  libminiprotoc.cpp  libminiprotoc.h
protoc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  a.out  cmake_install.cmake  extract_includes.bat  greet.pb.cc  greet.pb.h  greet.proto  libprotobuf-lite.vcxproj  libprotobuf-lite.vcxproj.filters  libprotobuf.vcxproj  libprotobuf.vcxproj.filters  libprotoc.vcxproj  libprotoc.vcxproj.filters  protobuf-lite.pc  protobuf.pc  protobuf.sln  protoc.vcxproj  protoc.vcxproj.filters  version.rc
protoc/cmake/: protobuf-config-version.cmake  protobuf-module.cmake  protobuf-targets.cmake
src/mini-protoc/: mini-protoc.vcxproj  mini-protoc.vcxproj.filters
src/protoc-gen-cs/: Program.cs  protoc-gen-cs.csproj
vs-extension/: ProtobufExtension.sln
vs-extension/ProtobufExtension/: LanguageServerClient.cs  ProtobufContentTypeDefinition.cs  ProtobufExtension.csproj  (+2 more)
vscode-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
(+63 files in other folders)
